change css specificity for form-social-btn-icons style

--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -81,12 +81,12 @@ form {
   }
 }
 
-.can-touch .form-social-btn-icons i {
-  &:hover {
+.can-touch .form-social-btn-icons button {
+  &:hover i {
     color: $form-icon-color;
   }
 
-  &:focus {
+  &:focus i {
     color: $form-icon-hover-color;
   }
 }
