--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -82,12 +82,12 @@ form {
 }
 
 .can-touch .form-social-btn-icons button {
-  &:hover i,
-  &:focus i {
+  &:hover i {
     color: $form-icon-color;
   }
 
-  &:active i {
+  &:active i,
+  &:focus i {
     color: $form-icon-hover-color;
   }
 }
