forgot to add class back

--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -81,7 +81,7 @@ form {
   }
 }
 
-.form-social-btn-icons button {
+.can-touch .form-social-btn-icons button {
   &.collapsed i {
     color: $form-icon-color;
   }
