--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,45 +1,66 @@
-<footer class="global-footer">
+<footer class="footer">
 
   <div class="footer-content">
-    <div class="footer-row">
-      <div class="footer-brand-col">
-        <a href="/about/#hubzone">HUBZone Certified</a>
-      </div>
-
-      <nav class="footer-nav-col">
-        <ul>
-          <li><a href="/hire-us/">Hire Us</a></li>
-          <li><a href="/join/">Join Us</a></li>
-          <li><a href="/alliances/">Alliances</a></li>
-          <li><a href="/policies/">Policies</a></li>
-        </ul>
-      </nav>
+    <div class="footer-brand">
+      <a class="footer-brandmark" href="/about/#hubzone">
+        HUBZone Certified
+      </a>
     </div>
 
-    <div class="footer-row">
-      <div class="footer-contribute-cta-col">
-        <a href="{{site.github_issues_url}}" role="button" target="_blank">
-          Report a bug with the site
-        </a>
+    <nav class="footer-nav">
+      <div class="footer-link-groups">
+        <div class="footer-link-group">
+          <div class="footer-links">
+            <h4>Services</h4>
+
+            <ul>
+              <li><a href="/services/digital-services-delivery/">Digital Services Delivery</a></li>
+              <li><a href="/services/digital-procurement/">Digital Procurement</a></li>
+              <li><a href="/services/digital-transformation/">Digital Transformation</a></li>
+              <li><a href="/services/microconsulting/">Microconsulting</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer-link-group">
+          <div class="footer-links">
+            <h4>Company</h4>
+
+            <ul>
+              <li><a href="/about/">About</a></li>
+              <li><a href="/culture/">Culture</a></li>
+              <li><a href="/join/">Careers</a></li>
+              <li><a href="/alliances/">Alliances</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer-link-group">
+          <div class="footer-links">
+            <h4>Resources</h4>
+
+            <ul>
+              <li><a href="/blog/">Blog</a></li>
+              <li><a href="/work/">Case Studies</a></li>
+              <li><a href="/policies/">Policies</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer-link-group">
+          <div class="footer-links">
+            <h4>Connect</h4>
+
+            <ul>
+              <li><a href="{{site.github_repo_url}}">GitHub</a></li>
+              <li><a href="{{site.twitter_url}}">Twitter</a></li>
+              <li><a href="{{site.linkedin_url}}">LinkedIn</a></li>
+              <li><a href="/hire-us/">Hire Us</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
-
-      <div class="footer-socials-col">
-        <a href="{{site.twitter_url}}" target="_blank">
-          <span class="sr-only">Twitter</span>
-          <i class="fa fa-2x fa-twitter" aria-hidden="true" title="Twitter"></i>
-        </a>
-
-        <a href="{{site.linkedin_url}}" target="_blank">
-          <span class="sr-only">LinkedIn</span>
-          <i class="fa fa-2x fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
-        </a>
-
-        <a href="{{site.github_repo_url}}" target="_blank">
-          <span class="sr-only">GitHub</span>
-          <i class="fa fa-2x fa-github" aria-hidden="true" title="GitHub"></i>
-        </a>
-      </div>
-    </div>
+    </nav>
   </div>
 
 </footer>
