normalize font weight of headings

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="global-header" role="banner">
+<header class="header" role="banner">
   <nav class="navbar">
     <div class="navbar-flex-container">
       <h1><a class="navbar-logo" href="/">Skylight</a></h1>
