--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -6,6 +6,15 @@
   font-size: $header-display-2;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @extend %font-weight-bold;
+}
+
 h1 {
   color: $brand-primary;
 }
