--- a/_includes/project.html
+++ b/_includes/project.html
@@ -27,82 +27,87 @@
       <h2>The solution</h2>
       {{include.solution}}
 
-      <aside class="approach">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="row">
+      {% capture accordion_body %}
+        <div class="approach">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="row">
 
-              <div class="approach-area-col">
-                <div class="approach-area-card">
-                  <div class="approach-area-card-block">
-                    <h3>Team Members</h3>
-                    <ul>
-                      {% for member in page.project_members %}
-                        {% assign emp = site.data.team | where: 'name', member | first %}
-                        <li>
-                          {% if emp.active %}
-                            <a class="profile profile-link" href="{{emp.profile_path}}">
-                              <img class="profile-img" src="{{emp.image}}" alt="{{emp.image_description}}">
-                              <span>{{emp.short_name}}</span>
-                            </a>
-                          {% else %}
-                            <div class="profile">
-                              <img class="profile-img" src="{{emp.image}}" alt="{{emp.image_description}}">
-                              <span>{{emp.short_name}}</span>
-                            </div>
-                          {% endif %}
-                        </li>
-                      {% endfor %}
-                    </ul>
+                <div class="approach-area-col">
+                  <div class="approach-area-card">
+                    <div class="approach-area-card-block">
+                      <h3>Team Members</h3>
+                      <ul>
+                        {% for member in page.project_members %}
+                          {% assign emp = site.data.team | where: 'name', member | first %}
+                          <li>
+                            {% if emp.active %}
+                              <a class="profile profile-link" href="{{emp.profile_path}}">
+                                <img class="profile-img" src="{{emp.image}}" alt="{{emp.image_description}}">
+                                <span>{{emp.short_name}}</span>
+                              </a>
+                            {% else %}
+                              <div class="profile">
+                                <img class="profile-img" src="{{emp.image}}" alt="{{emp.image_description}}">
+                                <span>{{emp.short_name}}</span>
+                              </div>
+                            {% endif %}
+                          </li>
+                        {% endfor %}
+                      </ul>
+                    </div>
                   </div>
                 </div>
-              </div>
 
-              <div class="approach-area-col">
-                <div class="approach-area-card">
-                  <div class="approach-area-card-block">
-                    <h3>Technology</h3>
-                    <ul>
-                      {% for tech in page.technologies %}
-                        <li>{{tech}}</li>
-                      {% endfor %}
-                    </ul>
+                <div class="approach-area-col">
+                  <div class="approach-area-card">
+                    <div class="approach-area-card-block">
+                      <h3>Technology</h3>
+                      <ul>
+                        {% for tech in page.technologies %}
+                          <li>{{tech}}</li>
+                        {% endfor %}
+                      </ul>
+                    </div>
                   </div>
                 </div>
-              </div>
 
-              <div class="approach-area-col">
-                <div class="approach-area-card">
-                  <div class="approach-area-card-block">
-                    <h3>Practices</h3>
-                    <ul>
-                      {% for practice in page.practices %}
-                        <li>{{practice}}</li>
-                      {% endfor %}
-                    </ul>
+                <div class="approach-area-col">
+                  <div class="approach-area-card">
+                    <div class="approach-area-card-block">
+                      <h3>Practices</h3>
+                      <ul>
+                        {% for practice in page.practices %}
+                          <li>{{practice}}</li>
+                        {% endfor %}
+                      </ul>
+                    </div>
                   </div>
                 </div>
-              </div>
 
+              </div>
             </div>
           </div>
         </div>
-      </aside>
+      {% endcapture %}
+      {% include accordion.html accordion_header = 'Approach' accordion_body = accordion_body accordion_index = '0' %}
 
       <h2>The results</h2>
       {{include.results}}
 
       {% if page.news_posts %}
-        <aside class="news-coverage">
-          <h3>News coverage</h3>
-          <ul>
-            {% for post in page.news_posts %}
-              <li>
-                <a href="{{post.url}}" target="_blank">{{post.title}}</a>
-              </li>
-            {% endfor %}
-          </ul>
-        </aside>
+        {% capture accordion_body %}
+          <div class='news-coverage'>
+              <ul>
+                {% for post in page.news_posts %}
+                  <li>
+                    <a href="{{post.url}}" target="_blank">{{post.title}}</a>
+                  </li>
+                {% endfor %}
+              </ul>
+          </div>
+        {% endcapture %}
+        {% include accordion.html accordion_header = 'News coverage' accordion_body = accordion_body accordion_index = '1' %}
       {% endif %}
 
       {% if page.project_url or page.source_code_url %}
