--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -141,6 +141,8 @@ $line-height-base: 1.7;
 $font-size-h1: 4rem;
 $font-size-h2: 3rem;
 $font-size-h3: 1.75rem;
+$font-size-h4: 1.5rem;
+$font-size-h5: 1.25rem;
 
 $font-weight-normal: 400;
 $font-weight-bold: 700;
@@ -197,8 +199,11 @@ $text-link-hover-color: $text-link-color;
 $text-link-border: 1px dotted $text-link-color;
 $text-link-border-hover: 1px solid $text-link-hover-color;
 
-$header-display-1: 4rem;
-$header-display-2: 3rem;
+$header-display-1: $font-size-h1;
+$header-display-2: $font-size-h2;
+$header-display-3: $font-size-h3;
+$header-display-4: $font-size-h4;
+$header-display-5: $font-size-h5;
 
 // Notice bar
 $notice-bar-link-color: $white;
