remove target blank attribute

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -52,14 +52,14 @@
           {% capture linkedin_url %} https://www.linkedin.com/shareArticle?mini=true&url={{post_url}} {% endcapture %}
 
           <div>
-            <a href="{{tweet_url}}" role="button" target="_blank">
+            <a href="{{tweet_url}}" role="button">
               <i class="fa fa-twitter" aria-hidden="true" title="Twitter"></i>
               Share on Twitter
             </a>
           </div>
 
           <div>
-            <a href="{{linkedin_url}}" role="button" target="_blank">
+            <a href="{{linkedin_url}}" role="button">
               <i class="fa fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
               Share on LinkedIn
             </a>
