--- a/_includes/open_positions.html
+++ b/_includes/open_positions.html
@@ -12,7 +12,7 @@
       {% assign open_positions = site.data.open_positions | sort: 'order' %}
       {% for open_position in open_positions %}
         <li>
-          <a href="{{open_position.url}}" target="_blank" title="View job posting for {{open_position.title}}">
+          <a href="{{open_position.url}}" title="View job posting for {{open_position.title}}">
             {{open_position.title}}
           </a>
           <p>{{open_position.location}}</p>
