--- a/_includes/project.html
+++ b/_includes/project.html
@@ -110,7 +110,7 @@
       {% if page.project_url or page.source_code_url %}
         <div class="project-case-study-footer">
           {% capture project_link_markup %}
-            <a class="work-example-cta" href="{{page.project_url}}" role="button">See the site</a>
+            <a class="work-example-cta" href="{{page.project_url}}" role="button">{{page.project_cta}}</a>
           {% endcapture %}
 
           {% capture source_code_link_markup %}
