--- a/_includes/accordion.html
+++ b/_includes/accordion.html
@@ -3,19 +3,14 @@
   <div class="card accordion-card">
 
     <!-- Card header -->
-    <div class="card-header accordion-header" role="tab" id="accordionHeading-{{include.accordion_index}}">
+    <div class="accordion-header" role="tab" id="accordionHeading-{{include.accordion_index}}">
       <a data-toggle="collapse" href="#accordionCollapse-{{include.accordion_index}}" aria-expanded="false" aria-controls="accordionCollapse-{{include.accordion_index}}" class='collapsed'>
         <div>
           <h5 class="mb-0">
             <div>
               {{ include.accordion_header }}
             </div>
-            <div class='accordion-icon-plus'>
-              <i class="fa fa-plus rotate-icon"></i>
-            </div>
-            <div class='accordion-icon-minus'>
-              <i class="fa fa-minus rotate-icon"></i>
-            </div>
+            <div class="plus-minus-toggle"></div>
           </h5>
         </div>
       </a>
